--- a/src/styles.css
+++ b/src/styles.css
@@ -22,7 +22,7 @@
   /* Colores de estado */
   --color-sobre: #FFC000;
   --color-exito: #4CAF50;
-  --color-advertencia: #ffff75;
+  --color-advertencia: #eded1b;
   --color-peligro: #F44336;
   --color-info: #000;
 
